queryloaders: g_get_prgname() now returns const gchar *

See https://bugzilla.gnome.org/show_bug.cgi?id=691499